--- a/ayatana-indicator-messages/PKGBUILD
+++ b/ayatana-indicator-messages/PKGBUILD
@@ -14,6 +14,7 @@ depends=(
   accountsservice
 )
 makedepends=(
+  intltool
   cmake                  # you call cmake in build()
   python                 # /usr/bin/gdbus-codegen is a Python script
   glib2-devel                  # provides /usr/bin/gdbus-codegen at build time
