--- a/ayatana-indicator-messages/PKGBUILD
+++ b/ayatana-indicator-messages/PKGBUILD
@@ -22,6 +22,7 @@ makedepends=(
   gtk3
   mate-common
   vala
+  gobject-introspection
   pkgconf                # good practice for pkg-config
 )
 
