--- a/lomiri-notifications-git/PKGBUILD
+++ b/lomiri-notifications-git/PKGBUILD
@@ -8,7 +8,7 @@ pkgdesc="This project provides an implementation of the Free Desktop Notificatio
 arch=("i686" "x86_64" "aarch64")
 url="https://gitlab.com/ubports/development/core/lomiri-notifications"
 license=("GPL3")
-depends=("glib2" "accountsservice" "hicolor-icon-theme" "dconf")
+depends=("lomiri" "glib2" "accountsservice" "hicolor-icon-theme" "dconf")
 makedepends=("gobject-introspection" "gtk-doc" "intltool" "accountsservice" "mate-common" "vala" "git")
 source=("git+https://gitlab.com/ubports/development/core/lomiri-notifications.git")
 md5sums=("SKIP")
