--- a/qmenumodel-git/PKGBUILD
+++ b/qmenumodel-git/PKGBUILD
@@ -3,7 +3,7 @@
 pkgname=qmenumodel-git
 _pkgname=qmenumodel
 pkgver=r578.0.9.2.r2.gc8b25f7
-pkgrel=0
+pkgrel=1
 pkgdesc='Qt binding for GMenuModel'
 url='https://github.com/AyatanaIndicators/qmenumodel'
 arch=(x86_64 i686 armv7h aarch64)
@@ -15,6 +15,8 @@ makedepends=(git cmake)
 source=('git+https://github.com/AyatanaIndicators/qmenumodel.git')
 sha256sums=('SKIP')
 
+options=(!strip)
+
 pkgver() {
   cd ${_pkgname}
   echo "r$(git rev-list --count HEAD).$(git describe --always)" | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
@@ -22,6 +24,7 @@ pkgver() {
 
 build() {
   cd ${_pkgname}
+  CFLAGS="-O2 -g" CXXFLAGS="-O2 -g" \
   cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_INSTALL_LIBDIR="lib/" .
   make
 }
