--- a/lomiri/PKGBUILD
+++ b/lomiri/PKGBUILD
@@ -6,7 +6,7 @@ pkgbase=lomiri
 pkgname=(lomiri)
 _pkgname=lomiri
 pkgver=0.5.0
-pkgrel=4
+pkgrel=5
 url='https://gitlab.com/ubports/development/core/lomiri'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL3)
@@ -23,7 +23,6 @@ sha256sums=(
   'SKIP'
   'SKIP'
 )
-options=(debug !strip)
 
 BUILDENV+=('!check') # https://paste.ubuntu.com/p/2d33RJX4W8/
 
@@ -60,8 +59,7 @@ build() {
   -DCMAKE_CXX_EXTENSIONS=OFF \
   -DCMAKE_INSTALL_PREFIX:PATH=/usr \
   -DCMAKE_INSTALL_LIBDIR="lib/" \
-  -DNO_TESTS=true \
-  -DCMAKE_BUILD_TYPE=RelWithDebInfo ..
+  -DNO_TESTS=true ..
   make
 }
 
