--- a/qmenumodel/PKGBUILD
+++ b/qmenumodel/PKGBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Ivan Semkin (ivan at semkin dot ru)
 
-pkgname=qmenumodel-git
+pkgname=qmenumodel
 _pkgname=qmenumodel
-pkgver=r578.0.9.2.r2.gc8b25f7
-pkgrel=1
+pkgver=0.9.2
+pkgrel=0
 pkgdesc='Qt binding for GMenuModel'
 url='https://github.com/AyatanaIndicators/qmenumodel'
 arch=(x86_64 i686 armv7h aarch64)
@@ -12,18 +12,19 @@ conflicts=(qmenumodel)
 provides=(qmenumodel)
 depends=(qt5-base qt5-quickcontrols)
 makedepends=(git cmake)
-source=('git+https://github.com/AyatanaIndicators/qmenumodel.git')
+source=('https://github.com/AyatanaIndicators/qmenumodel/archive/refs/tags/0.9.2.tar.gz')
 sha256sums=('SKIP')
 
 options=(!strip)
 
-pkgver() {
-  cd ${_pkgname}
-  echo "r$(git rev-list --count HEAD).$(git describe --always)" | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
-}
+# pkgver() {
+#   cd ${_pkgname}
+#   echo "r$(git rev-list --count HEAD).$(git describe --always)" | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
+# }
 
 build() {
   cd ${_pkgname}
+  # adding -g to CFLAGS and CXXFLAGS to include debug symbols in the build
   CFLAGS="-O2 -g" CXXFLAGS="-O2 -g" \
   cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_INSTALL_LIBDIR="lib/" .
   make
