--- a/lomiri-address-book-service-git/PKGBUILD
+++ b/lomiri-address-book-service-git/PKGBUILD
@@ -3,12 +3,12 @@
 pkgname=lomiri-address-book-service-git
 _pkgname=lomiri-address-book-service
 pkgver=r1209.9c96731
-pkgrel=0
+pkgrel=1
 pkgdesc='The Ubuntu Touch Address Book Service'
 url='https://gitlab.com/ubports/development/core/lomiri-address-book-service'
 arch=(x86_64 i686 armv7h aarch64)
 license=()
-depends=(libaccounts-qt5 folks libgee lomiri-url-dispatcher-git qt5-pim-git qt5-base lomiri-notifications-git libphonenumber lomiri-ui-toolkit-git buteo-syncfw-qml-git)
+depends=(libaccounts-qt5 folks libgee lomiri-url-dispatcher-git qt5-pim-git qt5-base lomiri-notifications-git libphonenumber lomiri-ui-toolkit-git buteo-syncfw-qml)
 makedepends=(git cmake vala ayatana-indicator-messages)
 source=('git+https://gitlab.com/ubports/development/core/lomiri-address-book-service.git')
 sha256sums=('SKIP')
