--- a/repowerd-git/PKGBUILD
+++ b/repowerd-git/PKGBUILD
@@ -3,12 +3,12 @@
 pkgname="repowerd-git"
 _pkgname="repowerd"
 pkgver=r450.f000502
-pkgrel=0
+pkgrel=1
 pkgdesc="Repowerd, power daemon for Lomiri UI"
 arch=("i686" "x86_64" "aarch64")
 url="https://gitlab.com/ubports/development/core/repowerd"
 license=("GPL3")
-depends=("glib2" "systemd" "qt5-base" "deviceinfo-git" "dbus")
+depends=("glib2" "systemd" "qt5-base" "deviceinfo" "dbus")
 makedepends=("cmake" "cmake-extras" "gmock")
 source=("git+https://gitlab.com/ubports/development/core/repowerd.git"
 )
