--- a/biometryd-git/PKGBUILD
+++ b/biometryd-git/PKGBUILD
@@ -23,7 +23,8 @@ makedepends=(
   boost
   libelf
   apparmor
-  process-cpp  
+  process-cpp
+  gtest
 )
 optdepends=('apparmor: confinement support')
 source=("git+https://gitlab.com/ubports/development/core/biometryd.git#branch=main"
@@ -50,7 +51,7 @@ build() {
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DCMAKE_POLICY_VERSION_MINIMUM=3.5
-  cmake --build build -- -j$(nproc)
+  cmake --build build
 }
 
 check() {
