fix biometryd-git build

--- a/biometryd-git/PKGBUILD
+++ b/biometryd-git/PKGBUILD
@@ -25,6 +25,7 @@ makedepends=(
   apparmor
   process-cpp
   properties-cpp
+  gtest
 )
 optdepends=('apparmor: confinement support')
 source=("git+https://gitlab.com/ubports/development/core/biometryd.git#branch=main"
