fix lomiri-content-hub-git build

--- a/lomiri-content-hub-git/PKGBUILD
+++ b/lomiri-content-hub-git/PKGBUILD
@@ -11,7 +11,7 @@ license=(LGPL3)
 conflicts=(content-hub)
 provides=(content-hub)
 depends=(lcov gcovr gmock lomiri-app-launch-git lomiri-download-manager-git gsettings-qt apparmor libnotify lomiri-ui-toolkit-git)
-makedepends=(qt5-tools git cmake cmake-extras doxygen graphviz) 
+makedepends=(glib2-devel qt5-tools git cmake cmake-extras doxygen graphviz) 
 checkdepends=(xorg-server-xvfb)
 source=('git+https://gitlab.com/ubports/development/core/lomiri-content-hub.git#branch=main')
 sha256sums=('SKIP')
