--- a/libusermetrics-git/PKGBUILD
+++ b/libusermetrics-git/PKGBUILD
@@ -10,7 +10,7 @@ arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL3 LGPL GPL)
 conflicts=(libusermetrics)
 provides=(libusermetrics)
-depends=(qt5-base qt5-xmlpatterns gsettings-qt apparmor click-git qdjango-git libqtdbustest-git)
+depends=(qt5-base qt5-xmlpatterns gsettings-qt apparmor click qdjango-git libqtdbustest)
 makedepends=(git cmake cmake-extras doxygen intltool)
 source=('git+https://gitlab.com/ubports/development/core/libusermetrics.git')
 sha256sums=('SKIP')
