--- a/lomiri-ui-toolkit-git/PKGBUILD
+++ b/lomiri-ui-toolkit-git/PKGBUILD
@@ -10,7 +10,7 @@ arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL)
 conflicts=(ubuntu-ui-toolkit)
 provides=(ubuntu-ui-toolkit)
-depends=(qt5-base qt5-quickcontrols lttng-ust libnih qt5-systems qt5-pim qt5-svg qt5-feedback suru-icon-theme-git qt5-graphicaleffects bluez-libs)
+depends=(qt5-base qt5-quickcontrols lttng-ust libnih qt5-systems qt5-pim qt5-svg qt5-feedback suru-icon-theme qt5-graphicaleffects bluez-libs)
 makedepends=(git)
 checkdepends=()
 source=('git+https://gitlab.com/ubports/development/core/lomiri-ui-toolkit.git#branch=main'
