--- a/lomiri-app-launch/PKGBUILD
+++ b/lomiri-app-launch/PKGBUILD
@@ -1,43 +1,43 @@
 # Maintainer: Ivan Semkin (ivan at semkin dot ru)
 
 pkgbase=lomiri-app-launch
-pkgname=(lomiri-app-launch-git)
+pkgname=(lomiri-app-launch)
 _pkgname=lomiri-app-launch
-pkgver=r3207.0.1.12
-pkgrel=3
+pkgver=0.1.12
+pkgrel=0
 pkgdesc='Session init system job for Launching Applications'
 url='https://github.com/ubports/ubuntu-app-launch'
 arch=(x86_64 i686 armv7h aarch64)
 license=(GPL)
 depends=(qt5-wayland zeitgeist gobject-introspection lttng-ust lomiri-api properties-cpp curl click)
 makedepends=(python-dbusmock dbus json-glib glib2-devel git cmake cmake-extras dbus-test-runner gtest lcov gcovr)
-source=('git+https://gitlab.com/ubports/development/core/lomiri-app-launch.git')
+source=('https://gitlab.com/ubports/development/core/lomiri-app-launch/-/archive/0.1.12/lomiri-app-launch-0.1.12.tar.gz')
 sha256sums=('SKIP')
 
 BUILDENV+=('!check') # Some tests are broken
 
 prepare() {
-    cd ${_pkgname}
+    cd ${_pkgname}-$pkgver
 }
 
-pkgver() {
-  cd ${_pkgname}
-  echo "r$(git rev-list --count HEAD).$(git describe --always)" | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
-}
+# pkgver() {
+#   cd ${_pkgname}
+#   echo "r$(git rev-list --count HEAD).$(git describe --always)" | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
+# }
 
 build() {
-  cd ${_pkgname}
+  cd ${_pkgname}-$pkgver
   cmake -DUSE_SYSTEMD=true -DENABLE_MIRCLIENT=false -DLOMIRI_APP_LAUNCH_ARCH=lib -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_INSTALL_LIBDIR="lib/" -DCMAKE_INSTALL_LIBEXECDIR="lib/" .
   make
 }
 
 check() {
-  cd ${_pkgname}
+  cd ${_pkgname}-$pkgver
   make ARGS+="--output-on-failure" test
 }
 
 package() {
-  cd ${_pkgname}
+  cd ${_pkgname}-$pkgver
   make DESTDIR="${pkgdir}/" install
 }
 
