--- a/lomiri-notifications/PKGBUILD
+++ b/lomiri-notifications/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Furkan Kardame <furkan@fkardame.com>
 
-pkgname="lomiri-notifications-git"
+pkgname="lomiri-notifications"
 _pkgname="lomiri-notifications"
-pkgver=git_r502
+pkgver=1.3.1
 pkgrel=2
 pkgdesc="This project provides an implementation of the Free Desktop Notification server for Lomiri. It also provides some additional features as needed on alternative platforms, such as mobile."
 arch=("i686" "x86_64" "aarch64")
@@ -10,26 +10,26 @@ url="https://gitlab.com/ubports/development/core/lomiri-notifications"
 license=("GPL3")
 depends=("glib2" "accountsservice" "hicolor-icon-theme" "dconf")
 makedepends=("lomiri-api" "gobject-introspection" "gtk-doc" "intltool" "accountsservice" "mate-common" "vala" "git")
-source=("git+https://gitlab.com/ubports/development/core/lomiri-notifications.git")
+source=("https://gitlab.com/ubports/development/core/lomiri-notifications/-/archive/1.3.1/lomiri-notifications-1.3.1.tar.gz")
 md5sums=("SKIP")
 options=("!emptydirs")
 provides=("${_pkgname}")
 conflicts=("${_pkgname}")
 
-pkgver()
-{
-    cd ${_pkgname}
-    echo "git_r$(git rev-list --count HEAD)"
-}
+# pkgver()
+# {
+#     cd ${_pkgname}
+#     echo "git_r$(git rev-list --count HEAD)"
+# }
 
 prepare()
 {
- cd ${_pkgname}
+ cd ${_pkgname}-$pkgver
 }
 
 build()
 {
-    cd ${_pkgname}
+    cd ${_pkgname}-$pkgver
     mkdir -p build
     cd build
     cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_INSTALL_LIBDIR="lib/" ..
@@ -38,7 +38,7 @@ build()
 
 package()
 {
-    cd ${_pkgname}/build
+    cd ${_pkgname}-$pkgver/build
     make DESTDIR="${pkgdir}" install
     find ${pkgdir}/usr/lib -name *.la -delete
 }
