--- a/lomiri-ui-toolkit/PKGBUILD
+++ b/lomiri-ui-toolkit/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Ivan Semkin (ivan at semkin dot ru)
 
-pkgname=lomiri-ui-toolkit-git
+pkgname=lomiri-ui-toolkit
 _pkgname=lomiri-ui-toolkit
-pkgver=r18776.1.3.5110.r71.gb24084320
+pkgver=1.3.5110
 pkgrel=0
 pkgdesc='This project consists of a set of QML components to ease the creation of beautiful applications in QML for Lomiri.'
 url='https://gitlab.com/ubports/development/core/lomiri-ui-toolkit'
@@ -13,7 +13,7 @@ provides=(ubuntu-ui-toolkit)
 depends=(qt5-base qt5-quickcontrols lttng-ust libnih qt5-systems qt5-pim qt5-svg qt5-feedback suru-icon-theme qt5-graphicaleffects bluez-libs)
 makedepends=(git)
 checkdepends=()
-source=('git+https://gitlab.com/ubports/development/core/lomiri-ui-toolkit.git#branch=main'
+source=('https://gitlab.com/ubports/development/core/lomiri-ui-toolkit/-/archive/1.3.5110/lomiri-ui-toolkit-1.3.5110.tar.gz'
         'NoWarns.patch'
         'dpkg.patch')
 sha256sums=('SKIP'
@@ -23,21 +23,21 @@ sha256sums=('SKIP'
 BUILDENV+=('!check') # It needs a DISPLAY, and I am too tired to set it up now
 
 prepare() {
-  cd ${_pkgname}
+  cd ${_pkgname}-$pkgver
 
   patch -Np1 -i "${srcdir}/NoWarns.patch"
   patch -Np1 -i "${srcdir}/dpkg.patch"
 }
 
-pkgver() {
-  cd ${_pkgname}
-  echo "r$(git rev-list --count HEAD).$(git describe --always)" | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
-}
+# pkgver() {
+#   cd ${_pkgname}
+#   echo "r$(git rev-list --count HEAD).$(git describe --always)" | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
+# }
 
 build() {
-  cd ${_pkgname}
+  cd ${_pkgname}-$pkgver
   qmake CONFIG+=no_docs
-  make 
+  make -j8
 }
 
 #check() {
@@ -46,7 +46,7 @@ build() {
 #}
 
 package() {
-  cd ${_pkgname}
+  cd ${_pkgname}-$pkgver
   make INSTALL_ROOT="${pkgdir}" install
 }
 # vim:set ts=2 sw=2 et:
