--- a/morph-browser-git/PKGBUILD
+++ b/morph-browser-git/PKGBUILD
@@ -3,12 +3,12 @@
 pkgname=morph-browser-git
 _pkgname=morph-browser
 pkgver=r7629.38cf29bb
-pkgrel=1
+pkgrel=2
 pkgdesc="Lomiri UI Web browser for Mobile Devices"
 arch=('x86_64' 'armv7' 'aarch64')
 url="https://github.com/ubports/morph-browser"
 license=('GPL3')
-depends=(qt5-webengine qt5-base qt5-declarative lomiri-ui-toolkit-git unity-action-api-git ubuntu-ui-extras-git)
+depends=(qt5-webengine qt5-base qt5-declarative lomiri-ui-toolkit unity-action-api-git ubuntu-ui-extras-git)
 makedepends=('git' 'cmake' 'intltool' 'clang')
 source=('git+https://github.com/ubports/morph-browser.git#branch=xenial'
 	'fix-qt5.patch'
