--- a/dialer-app-git/PKGBUILD
+++ b/dialer-app-git/PKGBUILD
@@ -3,12 +3,12 @@
 pkgname=dialer-app-git
 _pkgname=dialer-app
 pkgver=r1898.0958ccd
-pkgrel=1
+pkgrel=2
 pkgdesc='Dialer application'
 url='https://github.com/ubports/dialer-app'
 arch=(x86_64 i686 armv7h aarch64)
 license=()
-depends=(history-service-git telephony-service lomiri-address-book-service-git qt5-base gsettings-qt content-hub-git thumbnailer-git qt5-pim-git lomiri-ui-toolkit-git qt5-systems libqofono-qt5 address-book-app-git lomiri-address-book-service-git)
+depends=(history-service-git telephony-service lomiri-address-book-service-git qt5-base gsettings-qt content-hub-git thumbnailer-git qt5-pim-git lomiri-ui-toolkit qt5-systems libqofono-qt5 address-book-app-git lomiri-address-book-service-git)
 makedepends=(git cmake cmake-extras)
 source=('git+https://github.com/ubports/dialer-app.git')
 sha256sums=('SKIP')
