--- a/lomiri-indicator-location-git/PKGBUILD
+++ b/lomiri-indicator-location-git/PKGBUILD
@@ -3,12 +3,12 @@
 pkgname="lomiri-indicator-location-git"
 _pkgname="indicator-location"
 pkgver=git_r444
-pkgrel=1
+pkgrel=2
 pkgdesc="Lomiri Location Indicator"
 arch=("i686" "x86_64" "aarch64")
 url="https://github.com/ubports/indicator-location"
 license=("GPL2" "GPL3")
-depends=("systemd" "lomiri-app-launch-git" "glib2" "dbus" "properties-cpp" "lomiri-url-dispatcher-git")
+depends=("systemd" "lomiri-app-launch" "glib2" "dbus" "properties-cpp" "lomiri-url-dispatcher-git")
 makedepends=("cmake" "cmake-extras" "intltool" "git")
 source=("git+https://github.com/ubports/${_pkgname}.git"
         "fix-systemd.patch")
