--- a/lomiri-telephony-service-git/PKGBUILD
+++ b/lomiri-telephony-service-git/PKGBUILD
@@ -3,7 +3,7 @@
 pkgname=lomiri-telephony-service-git
 _pkgname=lomiri-telephony-service
 pkgver=r4983.0.6.1_16_gd4188be8
-pkgrel=2
+pkgrel=3
 pkgdesc='Lomiri Telephony Service is a backend dispatcher service for various mobilephone related operations.'
 url='https://gitlab.com/ubports/development/core/lomiri-telephony-service'
 arch=(x86_64 i686 armv7h aarch64)
@@ -12,7 +12,7 @@ conflicts=(telephony-service)
 provides=(telephony-service)
 depends=(qt5-base qt5-multimedia qt5-pim-git dbus-test-runner libusermetrics lomiri-url-dispatcher-git 
          libphonenumber telepathy-qt telepathy-mission-control lomiri-history-service libnotify
-         qt5-feedback lomiri-notifications-git)
+         qt5-feedback lomiri-notifications)
 makedepends=(git cmake libpulse)
 checkdepends=()
 source=('git+https://gitlab.com/ubports/development/core/lomiri-telephony-service.git#branch=main')
