--- a/lomiri/PKGBUILD
+++ b/lomiri/PKGBUILD
@@ -6,11 +6,11 @@ pkgbase=lomiri
 pkgname=(lomiri)
 _pkgname=lomiri
 pkgver=0.5.0
-pkgrel=9
+pkgrel=10
 url='https://gitlab.com/ubports/development/core/lomiri'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL3)
-depends=(dbus-cpp biometryd-git xorg-xwayland lcov gcovr geonames lomiri-system-settings lomiri-api qmenumodel gnome-desktop lomiri-app-launch-git lomiri-ui-toolkit-git libqtdbustest libqtdbusmock lomiri-indicator-network libusermetrics liblightdm-qt5 lomiri-settings-components lomiri-schemas deviceinfo qtmir-git lomiri-telephony-service-git lomiri-notifications-git lomiri-thumbnailer hfd-service lomiri-download-manager-git)
+depends=(dbus-cpp biometryd xorg-xwayland lcov gcovr geonames lomiri-system-settings lomiri-api qmenumodel gnome-desktop lomiri-app-launch lomiri-ui-toolkit libqtdbustest libqtdbusmock lomiri-indicator-network libusermetrics liblightdm-qt5 lomiri-settings-components lomiri-schemas deviceinfo qtmir-git lomiri-telephony-service-git lomiri-notifications lomiri-thumbnailer hfd-service lomiri-download-manager)
 makedepends=(git cmake cmake-extras doxygen)
 checkdepends=(xorg-server-xvfb)
 source=(
