--- a/messaging-app-git/PKGBUILD
+++ b/messaging-app-git/PKGBUILD
@@ -3,12 +3,12 @@
 pkgname=messaging-app-git
 _pkgname=messaging-app
 pkgver=r3325.5eb82a7e
-pkgrel=1
+pkgrel=2
 pkgdesc='Messaging App is the official SMS app'
 url='https://github.com/ubports/messaging-app'
 arch=(x86_64 i686 armv7h aarch64)
 license=()
-depends=(history-service-git telephony-service lomiri-address-book-service-git qt5-base gsettings-qt content-hub-git thumbnailer-git qt5-pim-git lomiri-ui-toolkit-git qt5-systems libqofono-qt5 address-book-app-git lomiri-address-book-service-git qt5-multimedia)
+depends=(history-service-git telephony-service lomiri-address-book-service-git qt5-base gsettings-qt content-hub-git thumbnailer-git qt5-pim-git lomiri-ui-toolkit qt5-systems libqofono-qt5 address-book-app-git lomiri-address-book-service-git qt5-multimedia)
 makedepends=(git cmake cmake-extras)
 source=('git+https://github.com/ubports/messaging-app.git#branch=xenial')
 sha256sums=('SKIP')
