--- a/qtmir-git/PKGBUILD
+++ b/qtmir-git/PKGBUILD
@@ -4,13 +4,13 @@ pkgbase=qtmir-git
 pkgname=(qtmir-git)
 _pkgname=qtmir
 pkgver=r2907.0.7.2.r113.gea2f4774
-pkgrel=2
+pkgrel=3
 url='https://gitlab.com/ubports/development/core/qtmir'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL)
 conflicts=(qtmir)
 provides=(qtmir)
-depends=(qt5-base qt5-quickcontrols qt5-sensors mir process-cpp lomiri-app-launch-git gsettings-qt libqtdbustest libqtdbusmock lomiri-url-dispatcher-git glm valgrind)
+depends=(qt5-base qt5-quickcontrols qt5-sensors mir process-cpp lomiri-app-launch gsettings-qt libqtdbustest libqtdbusmock lomiri-url-dispatcher-git glm valgrind)
 makedepends=(git cmake cmake-extras gtest)
 source=('git+https://gitlab.com/ubports/development/core/qtmir.git#commit=ea2f4774b1a109fec3e22a021fb21ff60da80626'
         'qtmir-debian-pkg.tar.gz::https://salsa.debian.org/ubports-team/qtmir/-/archive/debian/0.8.0_git20250407.ea2f477-2/qtmir-debian-0.8.0_git20250407.ea2f477-2.tar.gz'
