--- a/unav/PKGBUILD
+++ b/unav/PKGBUILD
@@ -2,12 +2,12 @@
 
 pkgname="unav"
 pkgver=git_r233
-pkgrel=1
+pkgrel=2
 pkgdesc="Simple and easy GPS navigator"
 arch=("any")
 url="https://github.com/costales/unav"
 license=("GPL3")
-depends=("qt5-base" "qt5-declarative" "lomiri-ui-toolkit-git")
+depends=("qt5-base" "qt5-declarative" "lomiri-ui-toolkit")
 makedepends=("git")
 source=("git+${url}.git" unav.desktop)
 md5sums=('SKIP'
