--- a/lomiri-url-dispatcher-git/PKGBUILD
+++ b/lomiri-url-dispatcher-git/PKGBUILD
@@ -3,8 +3,8 @@
 pkgbase=lomiri-url-dispatcher
 pkgname=(lomiri-url-dispatcher-git lomiri-url-dispatcher-gui-git)
 _pkgname=lomiri-url-dispatcher
-pkgver=r1031.0.1.4.r10.gf763aac
-pkgrel=2
+pkgver=r1032.0.1.4.r11.g403231b
+pkgrel=1
 pkgdesc='Service to allow sending of URLs and get handlers started'
 url='https://gitlab.com/ubports/development/core/lomiri-url-dispatcher'
 arch=(x86_64 i686 armv7h aarch64)
