--- a/lomiri-content-hub/PKGBUILD
+++ b/lomiri-content-hub/PKGBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Ivan Semkin (ivan at semkin dot ru)
 
-pkgname=lomiri-content-hub-git
+pkgname=lomiri-content-hub
 _pkgname=lomiri-content-hub
-pkgver=r1515.2.1.0_8_gb88c659
-pkgrel=2
+pkgver=2.1.0
+pkgrel=1
 pkgdesc='Content sharing/picking infrastructure and service, designed to allow apps to securely and efficiently exchange content'
 url='https://gitlab.com/ubports/development/core/lomiri-content-hub'
 arch=(x86_64 i686 armv7h aarch64)
@@ -13,28 +13,28 @@ provides=(content-hub)
 depends=(lcov gcovr gmock lomiri-app-launch lomiri-download-manager gsettings-qt apparmor libnotify lomiri-ui-toolkit)
 makedepends=(glib2-devel qt5-tools git cmake cmake-extras doxygen graphviz) 
 checkdepends=(xorg-server-xvfb)
-source=('git+https://gitlab.com/ubports/development/core/lomiri-content-hub.git#branch=main')
+source=('https://gitlab.com/ubports/development/core/lomiri-content-hub/-/archive/2.1.0/lomiri-content-hub-2.1.0.tar.gz')
 sha256sums=('SKIP')
 
 BUILDENV+=('!check') # https://paste.ubuntu.com/p/XXm29c8rv8/
 
-pkgver() {
-  cd ${_pkgname}
-  ver="r$(git rev-list --count HEAD).$(git describe --always)"
-  echo "${ver//-/_}"            # only: hyphens → underscores
-}
+# pkgver() {
+#   cd ${_pkgname}
+#   ver="r$(git rev-list --count HEAD).$(git describe --always)"
+#   echo "${ver//-/_}"            # only: hyphens → underscores
+# }
 
 prepare() {
-  cd ${_pkgname}
+  cd ${_pkgname}-${pkgver}
 
   sed -i 's/ubuntu-app-launch-2/ubuntu-app-launch-3/g' CMakeLists.txt
 }
 
 build() {
-  cd ${_pkgname}
+  cd ${_pkgname}-${pkgver}
   mkdir -p /tmp/runtime-builduser
   cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_INSTALL_LIBDIR="lib/" -DCMAKE_INSTALL_LIBEXECDIR="lib/" -DENABLE_TESTS=off .
-  XDG_RUNTIME_DIR=/tmp/runtime-builduser make
+  XDG_RUNTIME_DIR=/tmp/runtime-builduser make -j8
 }
 
 # check() {
@@ -43,7 +43,7 @@ build() {
 # }
 
 package() {
-  cd ${_pkgname}
+  cd ${_pkgname}-${pkgver}
   make DESTDIR="${pkgdir}/" install
   mv ${pkgdir}/usr/lib/qt5/ ${pkgdir}/usr/lib/qt/
 }
