--- a/lomiri-download-manager-git/PKGBUILD
+++ b/lomiri-download-manager-git/PKGBUILD
@@ -1,8 +1,9 @@
 # Maintainer: Ivan Semkin (ivan at semkin dot ru)
 
-pkgname=lomiri-download-manager
+pkgname=lomiri-download-manager-git
 _pkgname=lomiri-download-manager
-pkgver=0.2.1
+# Waiting for 0.2.2 tag to be created before removing -git
+pkgver=r2856.0.2.1_14_g7a47c6a1
 pkgrel=2
 pkgdesc='Provides a service for downloading files while an application is suspended'
 url='https://gitlab.com/ubports/development/core/lomiri-download-manager'
@@ -12,24 +13,24 @@ conflicts=(ubuntu-download-manager lomiri-download-manager)
 provides=(lomiri-download-manager)
 depends=(boost dbus-test-runner gmock qt5-base qt5-declarative libnih google-glog clang)
 makedepends=(libqtdbusmock apparmor git doxygen cmake cmake-extras gcovr lcov lomiri-api)
-source=('https://gitlab.com/ubports/development/core/lomiri-download-manager/-/archive/0.2.1/lomiri-download-manager-0.2.1.tar.gz')
+source=('git+https://gitlab.com/ubports/development/core/lomiri-download-manager.git')
 sha256sums=('SKIP')
 
 BUILDENV+=('!check') # Some tests are broken
 
 prepare() {
-  cd ${_pkgname}-${pkgver}
+  cd ${_pkgname}
   #patch -Np1 -i "${srcdir}/wno-error.patch"
 }
 
-# pkgver() {
-#   cd ${_pkgname}
-#   ver="r$(git rev-list --count HEAD).$(git describe --always)"
-#   echo "${ver//-/_}"            # only: hyphens → underscores
-# }
+pkgver() {
+  cd ${_pkgname}
+  ver="r$(git rev-list --count HEAD).$(git describe --always)"
+  echo "${ver//-/_}"            # only: hyphens → underscores
+}
 
 build() {
-  cd ${_pkgname}-$pkgver
+  cd ${_pkgname}
   cmake -DBUILD_TESTING=OFF -DENABLE_DOC=OFF -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_INSTALL_LIBDIR="lib/" -DCMAKE_INSTALL_LIBEXECDIR="lib/" .
   make
 }
@@ -40,7 +41,7 @@ build() {
 # }
 
 package() {
-  cd ${_pkgname}-$pkgver
+  cd ${_pkgname}
   make DESTDIR="${pkgdir}/" install
   mv ${pkgdir}/usr/lib/qt5/ ${pkgdir}/usr/lib/qt/
 }
