--- a/lomiri-content-hub/PKGBUILD
+++ b/lomiri-content-hub/PKGBUILD
@@ -3,14 +3,14 @@
 pkgname=lomiri-content-hub
 _pkgname=lomiri-content-hub
 pkgver=2.1.0
-pkgrel=1
+pkgrel=2
 pkgdesc='Content sharing/picking infrastructure and service, designed to allow apps to securely and efficiently exchange content'
 url='https://gitlab.com/ubports/development/core/lomiri-content-hub'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL3)
 conflicts=(content-hub)
 provides=(content-hub)
-depends=(lcov gcovr gmock lomiri-app-launch lomiri-download-manager gsettings-qt apparmor libnotify lomiri-ui-toolkit)
+depends=(lcov gcovr gmock lomiri-app-launch lomiri-download-manager-git gsettings-qt apparmor libnotify lomiri-ui-toolkit)
 makedepends=(glib2-devel qt5-tools git cmake cmake-extras doxygen graphviz) 
 checkdepends=(xorg-server-xvfb)
 source=('https://gitlab.com/ubports/development/core/lomiri-content-hub/-/archive/2.1.0/lomiri-content-hub-2.1.0.tar.gz')
