--- a/ayatana-indicator-power-git/PKGBUILD
+++ b/ayatana-indicator-power-git/PKGBUILD
@@ -8,7 +8,7 @@ pkgdesc="Ayatana Indicator showing power state"
 arch=("i686" "x86_64" "aarch64")
 url="https://github.com/AyatanaIndicators"
 license=("GPL2" "GPL3")
-depends=("libayatana-indicator" "upower" "systemd" "libnotify" "dconf" "lomiri-url-dispatcher-git")
+depends=("libayatana-indicator" "upower" "systemd" "libnotify" "dconf" "lomiri-url-dispatcher")
 makedepends=("cmake" "cmake-extras" "libnotify" "glib2" "python" "git")
 optdepends=("mate-ayatana-indicator-applet" "zenity" "mate-control-center" "mate-power-manager")
 source=("git+https://github.com/AyatanaIndicators/${_pkgname}.git")
