--- a/ayatana-indicator-session-git/PKGBUILD
+++ b/ayatana-indicator-session-git/PKGBUILD
@@ -8,7 +8,7 @@ pkgdesc="Ayatana Indicator showing session management, status and user switching
 arch=("i686" "x86_64" "aarch64")
 url="https://github.com/AyatanaIndicators"
 license=("GPL2" "GPL3")
-depends=("libayatana-indicator" "gsettings-desktop-schemas" "systemd" "glib2" "lomiri-url-dispatcher-git" "libayatana-common")
+depends=("libayatana-indicator" "gsettings-desktop-schemas" "systemd" "glib2" "lomiri-url-dispatcher" "libayatana-common")
 makedepends=("git" "cmake" "intltool" "glib2" "systemd")
 optdepends=("mate-screensaver" "mate-ayatana-indicator-applet" "mate-control-center" "yelp" "firefox")
 source=("git+https://github.com/AyatanaIndicators/${_pkgname}.git"
