--- a/ubuntu-push-git/PKGBUILD
+++ b/ubuntu-push-git/PKGBUILD
@@ -7,7 +7,7 @@ arch=('x86_64' 'aarch64')
 url="https://github.com/ubports/ubuntu-push"
 license=('GPL')
 depends=()
-makedepends=('git' 'go' 'click' 'lomiri-url-dispatcher-git' 'ubuntu-app-launch' 'indicator-messages')
+makedepends=('git' 'go' 'click' 'lomiri-url-dispatcher' 'ubuntu-app-launch' 'indicator-messages')
 provides=('ubuntu-push')
 conflicts=('ubuntu-push')
 source=("git+https://github.com/ubports/ubuntu-push"
