--- a/lomiri-address-book-service-git/PKGBUILD
+++ b/lomiri-address-book-service-git/PKGBUILD
@@ -8,7 +8,7 @@ pkgdesc='The Ubuntu Touch Address Book Service'
 url='https://gitlab.com/ubports/development/core/lomiri-address-book-service'
 arch=(x86_64 i686 armv7h aarch64)
 license=()
-depends=(libaccounts-qt5 folks libgee lomiri-url-dispatcher-git qt5-pim-git qt5-base lomiri-notifications libphonenumber lomiri-ui-toolkit buteo-syncfw-qml)
+depends=(libaccounts-qt5 folks libgee lomiri-url-dispatcher qt5-pim-git qt5-base lomiri-notifications libphonenumber lomiri-ui-toolkit buteo-syncfw-qml)
 makedepends=(git cmake vala ayatana-indicator-messages)
 source=('git+https://gitlab.com/ubports/development/core/lomiri-address-book-service.git')
 sha256sums=('SKIP')
