--- a/lomiri-indicator-bluetooth-git/PKGBUILD
+++ b/lomiri-indicator-bluetooth-git/PKGBUILD
@@ -9,7 +9,7 @@ pkgdesc="Bluetooth Indicator"
 arch=("i686" "x86_64" "aarch64")
 url="https://github.com/ubports/indicator-bluetooth"
 license=("GPL3")
-depends=("glib2" "accountsservice" "hicolor-icon-theme" "dconf" "lomiri-url-dispatcher-git")
+depends=("glib2" "accountsservice" "hicolor-icon-theme" "dconf" "lomiri-url-dispatcher")
 makedepends=("debianutils" "gnome-common" "systemd" "intltool" "accountsservice" "vala" "glib2" "gio-qt" "git")
 optdepends=("")
 source=("git+https://github.com/ubports/${_pkgname}.git"
