--- a/lomiri-indicator-network/PKGBUILD
+++ b/lomiri-indicator-network/PKGBUILD
@@ -10,7 +10,7 @@ arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL3 GPL3)
 conflicts=(indicator-network)
 provides=(indicator-network)
-depends=(lcov gcovr gsettings-qt ofono-git lomiri-url-dispatcher-git libqofono-qt5 libqtdbustest libqtdbusmock gmenuharness)
+depends=(lcov gcovr gsettings-qt ofono-git lomiri-url-dispatcher libqofono-qt5 libqtdbustest libqtdbusmock gmenuharness)
 makedepends=(git cmake cmake-extras doxygen)
 checkdepends=()
 source=(
