--- a/lomiri-telephony-service-git/PKGBUILD
+++ b/lomiri-telephony-service-git/PKGBUILD
@@ -10,7 +10,7 @@ arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL GPL)
 conflicts=(telephony-service)
 provides=(telephony-service)
-depends=(qt5-base qt5-multimedia qt5-pim-git dbus-test-runner libusermetrics lomiri-url-dispatcher-git 
+depends=(qt5-base qt5-multimedia qt5-pim-git dbus-test-runner libusermetrics lomiri-url-dispatcher 
          libphonenumber telepathy-qt telepathy-mission-control lomiri-history-service libnotify
          qt5-feedback lomiri-notifications)
 makedepends=(git cmake libpulse)
