--- a/platform-api-git/PKGBUILD
+++ b/platform-api-git/PKGBUILD
@@ -10,7 +10,7 @@ arch=(x86_64 i686 armv7h aarch64)
 license=(GPL3)
 conflicts=(platform-api)
 provides=(platform-api)
-depends=(location-service-git lomiri-url-dispatcher-git process-cpp)
+depends=(location-service-git lomiri-url-dispatcher process-cpp)
 makedepends=(git cmake cmake-extras doxygen)
 source=('git+https://github.com/ubports/platform-api.git'
         'hybris.patch')
