--- a/lomiri-telephony-service/PKGBUILD
+++ b/lomiri-telephony-service/PKGBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Marius Gripsgard <marius@ubports.com>
 
-pkgname=lomiri-telephony-service-git
+pkgname=lomiri-telephony-service
 _pkgname=lomiri-telephony-service
-pkgver=r4984.0.6.1_17_g16bdb98d
-pkgrel=2
+pkgver=0.6.1
+pkgrel=0
 pkgdesc='Lomiri Telephony Service is a backend dispatcher service for various mobilephone related operations.'
 url='https://gitlab.com/ubports/development/core/lomiri-telephony-service'
 arch=(x86_64 i686 armv7h aarch64)
@@ -15,19 +15,19 @@ depends=(qt5-base qt5-multimedia qt5-pim-git dbus-test-runner libusermetrics lom
          qt5-feedback lomiri-notifications)
 makedepends=(git cmake libpulse)
 checkdepends=()
-source=('git+https://gitlab.com/ubports/development/core/lomiri-telephony-service.git#branch=main')
+source=('https://gitlab.com/ubports/development/core/lomiri-telephony-service/-/archive/0.6.1/lomiri-telephony-service-0.6.1.tar.gz')
 sha256sums=('SKIP')
 
 BUILD_DIR=build
 
-pkgver() {
-  cd ${_pkgname}
-  ver="r$(git rev-list --count HEAD).$(git describe --always)"
-  echo "${ver//-/_}"            # only: hyphens → underscores
-}
+# pkgver() {
+#   cd ${_pkgname}
+#   ver="r$(git rev-list --count HEAD).$(git describe --always)"
+#   echo "${ver//-/_}"            # only: hyphens → underscores
+# }
 
 build() {
-  cd ${_pkgname}
+  cd ${_pkgname}-$pkgver
   mkdir -p ${BUILD_DIR}
   cd ${BUILD_DIR}
   cmake -DWANT_UI_SERVICES=no -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_INSTALL_LIBDIR="lib/" ..
@@ -35,6 +35,6 @@ build() {
 }
 
 package() {
-  cd ${_pkgname}/${BUILD_DIR}
+  cd ${_pkgname}/${BUILD_DIR}-$pkgver
   make DESTDIR="${pkgdir}/" install
 }
