remove -git from layer 6

--- a/lomiri-telephony-service/PKGBUILD
+++ b/lomiri-telephony-service/PKGBUILD
@@ -35,6 +35,6 @@ build() {
 }
 
 package() {
-  cd ${_pkgname}/${BUILD_DIR}-$pkgver
+  cd ${_pkgname}-$pkgver/${BUILD_DIR}
   make DESTDIR="${pkgdir}/" install
 }
