see if lomiri builds

--- a/ayatana-indicator-datetime-git/PKGBUILD
+++ b/ayatana-indicator-datetime-git/PKGBUILD
@@ -9,7 +9,7 @@ arch=("i686" "x86_64" "aarch64")
 url="https://github.com/AyatanaIndicators"
 license=("GPL3")
 depends=("glib2" "evolution-data-server" "libaccounts-glib" "properties-cpp")
-makedepends=("gsettings-qt" "glib2-devel" "ayatana-indicator-messages" "libayatana-common-git" "cmake" "cmake-extras" "dbus" "intltool" "glib2" "libnotify" "gstreamer" "libical" "evolution-data-server" "gsettings-desktop-schemas" "evolution-data-server" "git")
+makedepends=("gsettings-qt" "glib2-devel" "ayatana-indicator-messages" "libayatana-common" "cmake" "cmake-extras" "dbus" "intltool" "glib2" "libnotify" "gstreamer" "libical" "evolution-data-server" "gsettings-desktop-schemas" "evolution-data-server" "git")
 optdepends=("mate-ayatana-indicator-applet" "geoclue")
 source=("git+https://github.com/AyatanaIndicators/${_pkgname}.git"
        )
