remove -git from layer 7

--- a/ayatana-indicator-datetime/PKGBUILD
+++ b/ayatana-indicator-datetime/PKGBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Furkan Kardame <furkan@fkardame.com>
 
-pkgname="ayatana-indicator-datetime-git"
+pkgname="ayatana-indicator-datetime"
 _pkgname="ayatana-indicator-datetime"
-pkgver=git_r2899
-pkgrel=1
+pkgver=25.4.0
+pkgrel=0
 pkgdesc="Ayatana Indicator providing clock and calendar"
 arch=("i686" "x86_64" "aarch64")
 url="https://github.com/AyatanaIndicators"
@@ -11,27 +11,27 @@ license=("GPL3")
 depends=("glib2" "evolution-data-server" "libaccounts-glib" "properties-cpp")
 makedepends=("gsettings-qt" "glib2-devel" "ayatana-indicator-messages" "libayatana-common" "cmake" "cmake-extras" "dbus" "intltool" "glib2" "libnotify" "gstreamer" "libical" "evolution-data-server" "gsettings-desktop-schemas" "evolution-data-server" "git")
 optdepends=("mate-ayatana-indicator-applet" "geoclue")
-source=("git+https://github.com/AyatanaIndicators/${_pkgname}.git"
+source=("https://github.com/AyatanaIndicators/ayatana-indicator-datetime/archive/refs/tags/25.4.0.tar.gz"
        )
 md5sums=("SKIP"
         )
 options=("!emptydirs")
 
-pkgver()
-{
-    cd ${_pkgname}
-    echo "git_r$(git rev-list --count HEAD)"
-}
+# pkgver()
+# {
+#     cd ${_pkgname}
+#     echo "git_r$(git rev-list --count HEAD)"
+# }
 
 build()
 {
-    cd ${_pkgname}
+    cd ${_pkgname}-${pkgver}
     cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_INSTALL_LIBEXECDIR=lib -Denable_tests=OFF
     make
 }
 
 package()
 {
-    cd ${_pkgname}
+    cd ${_pkgname}-${pkgver}
     make DESTDIR="${pkgdir}" install
 }
