--- a/lomiri-sounds/PKGBUILD
+++ b/lomiri-sounds/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Furkan Kardame <furkan@fkardame.com>
 
 pkgname=(lomiri-sounds)
-_pkgname=ubuntu-touch-sounds
+_pkgname=lomiri-sounds
 pkgver=25.01
 pkgrel=0
 pkgdesc="Ringtones and notification tones for Lomiri"
@@ -11,10 +11,10 @@ license=('CC0' 'CC-BY-3.0' 'CC-BY-SA-3.0' 'CC-BY-4.0')
 source=('https://gitlab.com/ubports/development/core/lomiri-sounds/-/archive/25.01/lomiri-sounds-25.01.tar.gz')
 md5sums=('SKIP')
 
-pkgver() {
-  cd ${_pkgname}-$pkgver
-  printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short HEAD)"
-}
+# pkgver() {
+#   cd ${_pkgname}-$pkgver
+#   printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short HEAD)"
+# }
 
 package() {
   cd ${_pkgname}-$pkgver
