--- a/ayatana-indicator-power/PKGBUILD
+++ b/ayatana-indicator-power/PKGBUILD
@@ -9,7 +9,7 @@ arch=("i686" "x86_64" "aarch64")
 url="https://github.com/AyatanaIndicators"
 license=("GPL2" "GPL3")
 depends=("libayatana-common" "libayatana-indicator" "upower" "systemd" "libnotify" "dconf" "lomiri-url-dispatcher")
-makedepends=("lomiri-schemas" "lomiri-sounds" "cmake" "cmake-extras" "libnotify" "glib2" "python" "git")
+makedepends=("glib2-devel" "lomiri-schemas" "lomiri-sounds" "cmake" "cmake-extras" "libnotify" "glib2" "python" "git")
 optdepends=("mate-ayatana-indicator-applet" "zenity" "mate-control-center" "mate-power-manager")
 source=("https://github.com/AyatanaIndicators/ayatana-indicator-power/archive/refs/tags/24.5.2.tar.gz")
 md5sums=("SKIP")
