--- a/ayatana-indicator-sound/PKGBUILD
+++ b/ayatana-indicator-sound/PKGBUILD
@@ -1,17 +1,17 @@
 # Maintainer: Furkan Kardame <furkan@fkardame.com>
 
-pkgname="ayatana-indicator-sound-git"
+pkgname="ayatana-indicator-sound"
 _pkgname="ayatana-indicator-sound"
-pkgver=git_r2741
+pkgver=24.5.2
 pkgrel=1
 pkgdesc="Ayatana system sound indicator"
 arch=("i686" "x86_64" "aarch64")
 url="https://github.com/AyatanaIndicators"
 license=("GPL3")
-depends=("pulseaudio" "libayatana-indicator" "glib2" "accountsservice" "dconf" "libnotify" "libgee")
+depends=("pulseaudio" "libayatana-indicator" "glib2" "accountsservice" "dconf" "libnotify" "libgee" "libayatana-common")
 makedepends=("cmake" "cmake-extras" "dbus" "accountsservice" "mate-common" "gsettings-desktop-schemas" "intltool" "vala" "glib2" "libpulse" "libnotify" "libgee" "libxml2" "pulseaudio" "qt5-base" "qt5-declarative" "systemd" "gobject-introspection" "git")
 optdepends=("pavucontrol" "mate-media")
-source=("git+https://github.com/AyatanaIndicators/${_pkgname}.git" 
+source=("https://github.com/AyatanaIndicators/ayatana-indicator-sound/archive/refs/tags/24.5.2.tar.gz" 
           )
 md5sums=("SKIP") 
         
@@ -19,21 +19,21 @@ options=("!emptydirs")
 provides=("${_pkgname}")
 conflicts=("${_pkgname}")
 
-pkgver()
-{
-    cd ${_pkgname}	
-    echo "git_r$(git rev-list --count HEAD)"
-}
+# pkgver()
+# {
+#     cd ${_pkgname}	
+#     echo "git_r$(git rev-list --count HEAD)"
+# }
 
 build()
 {
-    cd ${_pkgname}
-    cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_INSTALL_LIBEXECDIR=lib -DCMAKE_INSTALL_LOCALSTATEDIR=/var -Denable_tests=OFF
+    cd ${_pkgname}-${pkgver}
+    cmake -DENABLE_LOMIRI_FEATURES=ON -DENABLE_TESTS=OFF -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_INSTALL_LIBEXECDIR=lib -DCMAKE_INSTALL_LOCALSTATEDIR=/var
     make
 }
 
 package()
 {
-    cd ${_pkgname}
+    cd ${_pkgname}-${pkgver}
     make DESTDIR="${pkgdir}" install
 }
