--- a/ayatana-indicator-session/PKGBUILD
+++ b/ayatana-indicator-session/PKGBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Furkan Kardame <furkan@fkardame.com>
 
-pkgname="ayatana-indicator-session-git"
+pkgname="ayatana-indicator-session"
 _pkgname="ayatana-indicator-session"
-pkgver=git_r2492
-pkgrel=2
+pkgver=24.5.1
+pkgrel=0
 pkgdesc="Ayatana Indicator showing session management, status and user switching"
 arch=("i686" "x86_64" "aarch64")
 url="https://github.com/AyatanaIndicators"
@@ -11,7 +11,7 @@ license=("GPL2" "GPL3")
 depends=("libayatana-indicator" "gsettings-desktop-schemas" "systemd" "glib2" "lomiri-url-dispatcher" "libayatana-common")
 makedepends=("git" "cmake" "intltool" "glib2" "systemd")
 optdepends=("mate-screensaver" "mate-ayatana-indicator-applet" "mate-control-center" "yelp" "firefox")
-source=("git+https://github.com/AyatanaIndicators/${_pkgname}.git"
+source=("https://github.com/AyatanaIndicators/ayatana-indicator-session/archive/refs/tags/24.5.1.tar.gz"
         'https://patch-diff.githubusercontent.com/raw/AyatanaIndicators/ayatana-indicator-session/pull/25.patch')
 md5sums=('SKIP'
          '962eeccbd33cb88d54bf0472bae4d2fb')
@@ -19,27 +19,27 @@ options=("!emptydirs")
 provides=("${_pkgname}")
 conflicts=("${_pkgname}")
 
-pkgver()
-{
-    cd ${_pkgname}
-    echo "git_r$(git rev-list --count HEAD)"
-}
+# pkgver()
+# {
+#     cd ${_pkgname}
+#     echo "git_r$(git rev-list --count HEAD)"
+# }
 
 prepare()
 {
-    cd ${_pkgname}
-    patch -p1 -i ../25.patch
+    cd ${_pkgname}-${pkgver}
+    # patch -p1 -i ../25.patch
 }
 
 build()
 {
-    cd ${srcdir}/${_pkgname}
-    cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_INSTALL_LIBEXECDIR=lib -Denable_tests=OFF
+    cd ${srcdir}/${_pkgname}-$pkgver
+    cmake -DENABLE_RDA=OFF -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_INSTALL_LIBEXECDIR=lib -DENABLE_TESTS=OFF
     make
 }
 
 package()
 {
-    cd ${srcdir}/${_pkgname}
+    cd ${srcdir}/${_pkgname}-$pkgver
     make DESTDIR="${pkgdir}" install
 }
